--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -34,8 +34,11 @@ header
     text-decoration: none
 
   .background
-    background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
-    background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+  
+    // background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+    // background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+    background-img: url('/assets/bg.png')
+
 
 a
   &.button-collapse
