--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -35,9 +35,9 @@ header
 
   .background
   
-    // background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
-    // background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
-    background-img: url('/assets/bg.png')
+    background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+    background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+    //background-img: url('/assets/bg.png')
 
 
 a
