--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -37,9 +37,10 @@ header
   
     //background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
     //background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
-   // background-image: url(/assets/res/bg.png)
-
-
+    background-image: url(/assets/res/bg.png)
+    background-position:center
+    background-repeat:no-repeat
+    
 a
   &.button-collapse
     &.top-nav
