--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -38,8 +38,8 @@ header
     //background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
     //background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
     background-image: url(/assets/res/bg.png)
-    background-position:center
-    background-repeat:no-repeat
+    background-size:contain
+    background-repeat: no-repeat
     
 a
   &.button-collapse
