--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="baidu-site-verification" content="X2hsRcRCeh" />
+    <meta name="360-site-verification" content="fa6ca3a9a0330e9cecabee0a9fe1d52a" />
     <title>
       {% if page.title %}
       {{ page.title | escape }}
