--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,11 @@
     {% seo title=false %}
   </head>
   <body>
+    <script>(function(){
+      var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?9a9ed8ab4ddeae919346a010fbb8884f":"https://jspassport.ssl.qhimg.com/11.0.1.js?9a9ed8ab4ddeae919346a010fbb8884f";
+      document.write('<script src="' + src + '" id="sozz"><\/script>');
+      })();
+    </script>
     <header>
       <nav class="top-nav teal">
         <div class="nav-wrapper">
