--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -42,6 +42,10 @@ header
   
     background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
     background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+
+      img
+
+        border:3px solid #009688
     
 a
   &.button-collapse
