--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -43,9 +43,9 @@ header
     background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
     background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
 
-      img
+  .circle
 
-        border:3px solid #009688
+    border:3px solid #009688
     
 a
   &.button-collapse
@@ -102,6 +102,8 @@ main
   nav 
     .nav-wrapper
       text-align: center
+      background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
+      background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%)
 
 @media only screen and (max-width: 600px)
   nav
