--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -45,8 +45,10 @@ header
 
   .circle
 
-    border:3px solid #009688
-    
+    //border:3px solid #009688
+    border-style: solid
+	border-color: #009688
+	border-width: 3px
 a
   &.button-collapse
     &.top-nav
