--- a/assets/css/post.sass
+++ b/assets/css/post.sass
@@ -32,6 +32,7 @@ main
   h3
     font-weight: bold
     margin-bottom: 15px
+	font-size:20px
 
   ul
     &:not(.browser-default)
@@ -67,6 +68,7 @@ main
   #post-info
     h3
       text-align: center
+	  font-size:10px
 
     ul
       &:not(.browser-default)
