--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -82,6 +82,13 @@ footer.page-footer
   p
     margin-top: 5px
 
+  .footer-message
+    dispplay: inline
+    font-size: 20px
+    font-style: italic
+    font-weight: bold
+
+
 // Misc
 blockquote
   border-left-color: teal
