--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,15 @@
     </main>
 
     <footer class="page-footer teal">
-
       <div class="container">
         <div class="row">
           <div class="col s12">
             <img src="{{site.baseurl}}/assets/res/logo.png" alt="logo"/>
+            <p class="footer-message">&nbsp;勤奋的程序猿，用心敲写明天</p>
             <p class="grey-text text-lighten-4">{{site.description}}</p>
           </div>
         </div>
       </div>
-
-      <div class="footer-message">
-      	<p>&nbsp;勤奋的程序猿，用心敲写明天</p>
-      </div>  	
       <div class="footer-copyright">
         <div class="container">
           &#xA9; {{"now" | date: "%Y"}} {{site.title}}. All rights reserved. Powered by <a href={{site.url}}>knightyun</a>.
