--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -83,7 +83,7 @@ footer.page-footer
     margin-top: 5px
 
     .footer-message
-      dispplay: inline
+      display: inline
       font-size: 20px
       font-style: italic
       font-weight: bold
