--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,6 +46,7 @@
         <div class="nav-wrapper">
           <div class="container">
             <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
+            <p class="head-message">学习&nbsp;&nbsp;总结&nbsp;&nbsp;分享&nbsp;&nbsp;提升</p>
           </div>
         </div>
       </nav>
