--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -68,9 +68,16 @@ nav
     font-weight: bold
     line-height: 80px
 
+  .head-message
+    font-size: 32px
+    font-weight: bold
+    font-style: italic
+    line-height: 80px
+
+
 nav
   &.top-nav
-    height: 80px
+    height: 200px
 
 // Footer
 footer.page-footer
