--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col s12">
             <img src="{{site.baseurl}}/assets/res/logo.png" alt="logo"/>
-            <p class="footer-message">&nbsp;勤奋的程序猿，用心敲写明天</p>
+            <span class="footer-message">&nbsp;勤奋的程序猿，用心敲写明天</span>
             <p class="grey-text text-lighten-4">{{site.description}}</p>
           </div>
         </div>
