--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -91,6 +91,7 @@ footer.page-footer
     font-size: 20px
     font-style: italic
     font-weight: bold
+    color: white
 
   p
     margin-top: 5px
