--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
       })();
     </script>
     <header>
-      <nav class="top-nav teal">
+      <nav class="top-nav">
         <div class="nav-wrapper">
           <div class="container">
             <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
