--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -79,6 +79,9 @@ nav
 nav
   &.top-nav
     height: 200px
+    background: -webkit-linear-gradient(90deg, #3AA17E 10%, #00537E 90%) !important
+    background: linear-gradient(90deg, #3AA17E 10%, #00537E 90%) !important
+
 
 // Footer
 footer.page-footer
