--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -8,7 +8,7 @@
     src: url('/assets/fonts/ch-kaiti.eot?#iefix') format('embedded-opentype'),
          url('/assets/fonts/ch-kaiti.woff2') format('woff2'),
          url('/assets/fonts/ch-kaiti.woff') format('woff'),
-         url('/assets/fonts/ch-kaiti.ttf') format('truetype')
+         url('/assets/fonts/ch-kaiti.ttf') format('truetype'),
          url('ch-kaiti.svg#ch-kaiti') format('svg');
     font-weight: normal;
     font-style: normal;
