--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: 'ch-kaiti';
-    src: url('/assets/fonts/ch-kaiti.eot');
-    src: url('/assets/fonts/ch-kaiti.eot?#iefix') format('embedded-opentype'),
-         url('/assets/fonts/ch-kaiti.woff2') format('woff2'),
-         url('/assets/fonts/ch-kaiti.woff') format('woff'),
-         url('/assets/fonts/ch-kaiti.ttf') format('truetype'),
-         url('ch-kaiti.svg#ch-kaiti') format('svg');
+    src: url('{{site.baseurl}}/assets/fonts/ch-kaiti.eot');
+    src: url('{{site.baseurl}}/assets/fonts/ch-kaiti.eot?#iefix') format('embedded-opentype'),
+         url('{{site.baseurl}}/assets/fonts/ch-kaiti.woff2') format('woff2'),
+         url('{{site.baseurl}}/assets/fonts/ch-kaiti.woff') format('woff'),
+         url('{{site.baseurl}}/assets/fonts/ch-kaiti.ttf') format('truetype'),
+         url('{{site.baseurl}}ch-kaiti.svg#ch-kaiti') format('svg');
     font-weight: normal;
     font-style: normal;
 
