--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,15 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{site.baseurl}}/feed.xml">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="{{site.baseurl}}/sitemap.xml">
     {% seo title=false %}
+    <script>
+    	var _hmt = _hmt || [];
+    	(function() {
+    		var hm = document.createElement("script");
+    		hm.src = "https://hm.baidu.com/hm.js?71e61d0c25aa13c0499c9a5ace61ad5d";
+    		var s = document.getElementsByTagName("script")[0]; 
+    		s.parentNode.insertBefore(hm, s);
+    	})();
+    </script>
   </head>
   <body>
     <script>(function(){
