--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,8 @@
   			s.parentNode.insertBefore(hm, s);
 		})();
 	</script>
+	<!--熊掌号-->
+	<script src="//msite.baidu.com/sdk/c.js?appid=1596010848630655"></script>
   </head>
   <body>
     <script>(function(){
