--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,10 @@ css: ["page.css"]
   <h3>{{page.title}}</h3>
 </div>
 <div class="row">
-  {{ content }}
+	{{ content }}
+	<!--熊掌号-->
+	<div style="padding-left: 17px; padding-right: 17px;">
+		<script>cambrian.render('tail')</script>
+	</div>
+	<!--end-->
 </div>
