--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,12 @@
 {% include header.html %}
 
 <div class="container">
-  {{ content }}
+	{{ content }}
+	<!--熊掌号-->
+	<div style="padding-left: 17px; padding-right: 17px;">
+		<script>cambrian.render('tail')</script>
+	</div>
+	<!--end-->
 </div>
 
 {% include footer.html %}
