--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 
 <div class="container">
 	{{ content }}
-	<!--熊掌号-->
+	<!--熊掌号
 	<div style="padding-left: 17px; padding-right: 17px;">
 		<script>cambrian.render('tail')</script>
 	</div>
-	<!--end-->
+	end-->
 </div>
 
 {% include footer.html %}
