--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,11 @@ js: ["post.js"]
 ---
 <div id="post-info">
   <h3>{{page.title}}</h3>
-  <!--熊掌号-->
+  <!--熊掌号
   <div style="padding-left: 17px; padding-right: 17px;">
     <script>cambrian.render('head')</script>
   </div>
-  <!--end-->
+  end-->
   <ul class="collapsible hoverable" data-collapsible="accordion">
     <li>
       <div class="collapsible-header">
