--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,5 +60,8 @@ js: ["post.js"]
     (d.head || d.body).appendChild(s);
   })();
 </script>
+<!--百度资源自动提交-->
+<script type="text/javascript" src="baidu_js_push.php"></script>
+<!--end-->
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
