--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,6 +62,9 @@
 		})();
 	</script>
 	<!--end-->
+	<!--SOUGOU-->
+	<meta name="sogou_site_verification" content="LpASF3eL8c"/>
+	<!--END-->
 </head>
 <body>
 	<script>(function(){
