--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="baidu-site-verification" content="X2hsRcRCeh" />
 	<meta name="360-site-verification" content="fa6ca3a9a0330e9cecabee0a9fe1d52a" />
+	<meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
+	<!--SOUGOU-->
+	<meta name="sogou_site_verification" content="LpASF3eL8c"/>
+	<!--END-->
 	<title>
 		{% if page.title %}
 		{{ page.title | escape }}
@@ -62,9 +66,6 @@
 		})();
 	</script>
 	<!--end-->
-	<!--SOUGOU-->
-	<meta name="sogou_site_verification" content="LpASF3eL8c"/>
-	<!--END-->
 </head>
 <body>
 	<script>(function(){
