--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 	<meta name="360-site-verification" content="fa6ca3a9a0330e9cecabee0a9fe1d52a" />
 	<meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
 	<!--SOUGOU-->
-	<meta name="sogou_site_verification" content="LpASF3eL8c"/>
+	<meta name="sogou_site_verification" content="oatSp9uAV5"/>	
 	<!--END-->
 	<title>
 		{% if page.title %}
