--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,14 +3,14 @@
     <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
   </div>
   <div class="user-intro center-align">
-    <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Doge, Much Wow, Such Cool</span> Text Rotator</h4>
+    <h4 class="hidden">一个<span id="js-rotating">勤奋, 上进, 苦钻, 求索</span>的码农新手</h4>
   </div>
   <div class="user-content">
     <p>
-      Īn delectus tǣcimates perīculā sīt, duō et ƿisl justo oporteat. Mēl te veƿiǽm ġrǣeco iuvǣrēÞ, per āt ǽdmodūm mēƿandri ǽðipiscīng. Eæ qui dicō ǣlia essēnÞ, āt ƿec fugit eraƿt æppǣreǽÞ. Cu ēæm omnes plaċerāt.
+      心中本没有路，用双手敲写自己的明天。
     </p>
     <p>
-      Lorem ipsum ðolor sit amēt, per hǣrum soleǽt convenire et. Diċo dolōrum qualisque meī ēt, ius æƿ modus facilisi dīspūtaÞioƿī. Ei puteƿÞ vērear quo, ne sit stet sǣpientēm ċoncepÞam. Sed prōbo virtute voluptariā ūt. Ullūm promptǽ ið mel, dīæm neglegenÞur per no, eī nullam possim mediōcrēm pri.
+      知之甚少，学之甚多，生命不休，求索不止。
     </p>
   </div>
 </div>
