--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,4 @@
 <div class="col s12">
-给我发邮件：<address>2386209384@qq.com</a><br/><br>
-
+给我发邮件：<address>2386209384@qq.com</address><br/><br/>
 或者：<a href="http://free.3v.do/gbook/index.asp?username=knightyun">给我留言</a>
-  <div class="icontain">
-    <iframe src="{{site.contact_url}}">Loading...</iframe>
-  </div>
 </div>
