--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
 <div class="col s12">
 	<p>给我发邮件：<a href="mailto:2386209384@qq.com">2386209384@qq.com</a></p><br>
-	<p>或者：<a href="http://free.3v.do/gbook/index.asp?username=knightyun">给我留言</a></p>
+	<p>或者：<a href="http://free.3v.do/gbook/index.asp?username=knightyun" target="_blank">给我留言</a></p>
 </div>
