--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,6 +74,8 @@
 		})();
 	</script>
 	<!--end-->
+	<!--Linked in-->
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
 	<script>(function(){
@@ -112,6 +114,7 @@
 		<li><div class="divider"></div></li>
 		<li><a class="waves-effect" href="{{site.baseurl}}/about"><i class="material-icons">person</i>About</a></li>
 		<li><a class="waves-effect" href="{{site.baseurl}}/contact"><i class="material-icons">email</i>Contact</a></li>
+		<li><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="zh_CN" data-type="vertical" data-theme="light" data-vanity="琦雲-黄-a4b9b9164"><a class="LI-simple-link" href='https://cn.linkedin.com/in/%E7%90%A6%E9%9B%B2-%E9%BB%84-a4b9b9164?trk=profile-badge'>黄琦雲</a></div></li>
 	</ul>
 	<script>
 		// change background color
