--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,4 +13,5 @@
       知之甚少，学之甚多，生命不休，求索不止。
     </p>
   </div>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="zh_CN" data-type="horizontal" data-theme="light" data-vanity="琦雲-黄-a4b9b9164"><a class="LI-simple-link" href='https://cn.linkedin.com/in/%E7%90%A6%E9%9B%B2-%E9%BB%84-a4b9b9164?trk=profile-badge'>黄琦雲</a></div>
 </div>
