--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,6 +76,8 @@
 	<!--end-->
 	<!--Linked in-->
 	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+	<!-- 访问统计 -->
+	<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
 <body>
 	<script>(function(){
