--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,10 @@
           <div class="col s12">
             <img src="{{site.baseurl}}/assets/res/logo.png" alt="logo"/>
             <span class="footer-message">&nbsp;勤奋的程序猿，用心敲写明天</span>
-            <p>给我发邮件: <address style="display: inline;">2386209384@qq.com</address></p>
-            <p>或者: <a href="http://free.3v.do/gbook/index.asp?username=knightyun">给我留言</a></p>
+            
+            <p id="busuanzi_container_site_pv">访问量：<span id="busuanzi_value_site_pv"></span>次</p>
+            <p id="busuanzi_container_site_pv">访客量：<span id="busuanzi_value_site_uv"></span>位</p>
+
             <p class="grey-text text-lighten-4">{{site.description}}</p>
           </div>
        </div>
