--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ js: ["post.js"]
         <span>
           <i class="material-icons tooltipped" data-position="left" data-delay="30" data-tooltip="Date">date_range</i>
           {{page.date | date: "%d/%m/%Y %H:%M"}}
-          <span id="busuanzi_container_site_pv">访问量：<span id="busuanzi_value_page_pv"></span>次</span>
+          <p id="busuanzi_container_site_pv">点击量：<span id="busuanzi_value_page_pv"></span>次</p>
           <i id="indicate" class="right material-icons tooltipped" data-position="left" data-delay="30" data-tooltip="Show extra info">info</i>
         </span>
       </div>
