--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ js: ["post.js"]
       <div class="collapsible-header">
         <span>
           <i class="material-icons tooltipped" data-position="left" data-delay="30" data-tooltip="Date">date_range</i>
-          {{page.date | date: "%d/%m/%Y %H:%M"}}
-          <p id="busuanzi_container_site_pv">点击量：<span id="busuanzi_value_page_pv"></span>次</p>
+          {{page.date | date: "%d/%m/%Y %H:%M"}}<br />
+          <p style="display: inline;" id="busuanzi_container_site_pv">点击量：<span id="busuanzi_value_page_pv"></span>次</p>
           <i id="indicate" class="right material-icons tooltipped" data-position="left" data-delay="30" data-tooltip="Show extra info">info</i>
         </span>
       </div>
